# learning-python-packages

./: LICENSE  README.md  pyproject.toml  test.py
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
src/first_try_IVANMOZUN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
